--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -121,11 +121,11 @@
             <span class="text-main">TUI</span> Studio
          </div>
 
-         <div class="slogan">
-            Let our workforce finish the last mile
-            <br>
-            so can you connect with your clients for the long haul.
-         </div>
+         {#         <div class="slogan">#}
+         {#            Let our workforce finish the last mile#}
+         {#            <br>#}
+         {#            so can you connect with your clients for the long haul.#}
+         {#         </div>#}
       </div>
    </div>
 </div>
