--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 
 {% block page_id %}page-index{% endblock %}
-{% block page_title %}TUI Studio | An Innovative Workforce Marketplace|Intelligence as a Service for Web Solutions{% endblock %}
+{% block page_title %}TUI Studio | An Innovative Workforce Marketplace|Intelligence as a Service for
+   Web Solutions{% endblock %}
 {% block page_css %}
    {{ link('css/site/index.css') }}
 {% endblock %}
@@ -15,7 +16,8 @@
          <div class="banner-text">
             <h1 class="text-center">Boost Your Business With US</h1>
 
-            <p class="text-center">TUI Studio is an innovative workforce marketplace focusing on Intelligence as a Service for Web solutions.</p>
+            <p class="text-center">TUI Studio is an innovative workforce marketplace focusing on
+               Intelligence as a Service for Web solutions.</p>
          </div>
 
          <ul class="icons list-inline list-unstyled">
@@ -85,91 +87,53 @@
       </div>
    </div>
 
-   <div class="container works">
-      <h1 class="title">STARTUPS</h1>
+   {#   <div class="container works">#}
+   {#      <h1 class="title">STARTUPS</h1>#}
+   {##}
+   {#      <div class="work-logos-wap">#}
+   {#         <div class="work-logo" data-scroll-target="aod">#}
+   {#            <div class="bg"></div>#}
+   {#            <div class="logo aod-logo"></div>#}
+   {#         </div>#}
+   {##}
+   {#         <div class="work-logo" data-scroll-target="lemaker">#}
+   {#            <div class="bg"></div>#}
+   {#            <div class="logo lemaker-logo"></div>#}
+   {#         </div>#}
+   {##}
+   {#         <div class="work-logo" data-scroll-target="zj">#}
+   {#            <div class="bg"></div>#}
+   {#            <div class="logo zj-logo"></div>#}
+   {#         </div>#}
+   {##}
+   {#         <div class="work-logo" data-scroll-target="lft">#}
+   {#            <div class="bg"></div>#}
+   {#            <div class="logo lft-logo"></div>#}
+   {#         </div>#}
+   {##}
+   {#         <div class="work-logo" data-scroll-target="tq">#}
+   {#            <div class="bg"></div>#}
+   {#            <div class="logo tq-logo"></div>#}
+   {#         </div>#}
+   {#      </div>#}
+   {#   </div>#}
 
-      <div class="work-logos-wap">
-         <div class="work-logo" data-scroll-target="aod">
-            <div class="bg"></div>
-            <div class="logo aod-logo"></div>
-         </div>
-
-         <div class="work-logo" data-scroll-target="lemaker">
-            <div class="bg"></div>
-            <div class="logo lemaker-logo"></div>
-         </div>
-
-         <div class="work-logo" data-scroll-target="zj">
-            <div class="bg"></div>
-            <div class="logo zj-logo"></div>
-         </div>
-
-         <div class="work-logo" data-scroll-target="lft">
-            <div class="bg"></div>
-            <div class="logo lft-logo"></div>
-         </div>
-
-         <div class="work-logo" data-scroll-target="tq">
-            <div class="bg"></div>
-            <div class="logo tq-logo"></div>
-         </div>
-      </div>
+   <div class="work works">
+      <img src="{{ static('image/works/STARTUP1.png') }}" alt=""/>
    </div>
 
-   <div class="work aod">
-      <div class="container clearfix">
-         <h1>AOD</h1>
-
-         <div class="image-wap">
-            <img class="center-block img-responsive" src="{{ static('image/works/aod.png') }}"
-                 alt="">
-         </div>
-      </div>
+   <div class="slogan">
+      Let our workforce finish the last mile
+      <br>
+      so can you connect with your clients for the long haul.
    </div>
 
-   <div class="work lemaker">
-      <div class="container clearfix">
-         <h1>LeMaker</h1>
-
-         <div class="image-wap">
-            <img class="center-block img-responsive" src="{{ static('image/works/lemaker.png') }}"
-                 alt="">
-         </div>
-      </div>
+   <div class="work">
+      <img src="{{ static('image/works/STARTUP2.jpg') }}" alt=""/>
    </div>
 
-   <div class="work zj">
-      <div class="container clearfix">
-         <h1>Zhongjie</h1>
-
-         <div class="image-wap">
-            <img class="center-block img-responsive"
-                 src="{{ static('image/works/zj.jpg') }}" alt="">
-         </div>
-      </div>
-   </div>
-
-   <div class="work lft">
-      <div class="container clearfix">
-         <h1>Lifengtang</h1>
-
-         <div class="image-wap">
-            <img class="center-block img-responsive"
-                 src="{{ static('image/works/lifengtang.jpg') }}"
-                 alt="">
-         </div>
-      </div>
-   </div>
-
-   <div class="work tq">
-      <div class="container clearfix">
-         <h1>Tianqin</h1>
-
-         <div class="image-wap">
-            <img class="center-block img-responsive" src="{{ static('image/works/tianqing.jpg') }}"
-                 alt="">
-         </div>
-      </div>
+   <div class="work">
+      <img src="{{ static('image/works/STARTUP3.jpg') }}" alt=""/>
    </div>
 
    <div class="techs">
