--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -118,8 +118,9 @@ a {
 }
 
 .footer {
-  background-color: rgb(79, 81, 97);
-  padding: 45px 0;
+  background: url('/static/image/footer-bg.png') no-repeat;
+  background-size: 100% 100%;
+  padding: 125px 0 45px 0;
   line-height: 1;
   margin-top: 80px;
   color: white;
