--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -117,10 +117,15 @@ a {
   }
 }
 
+.footer-header{
+  height: 77px;
+  background: url('/static/image/footer-bg-header.png') no-repeat top right;
+}
+
 .footer {
   background: url('/static/image/footer-bg.png') no-repeat;
   background-size: 100% 100%;
-  padding: 125px 0 45px 0;
+  padding: 45px 0 45px 0;
   line-height: 1;
   margin-top: 0px;
   color: white;
