--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -227,7 +227,7 @@
   font-size: 30px;
   font-weight: lighter;
   color: white;
-  background-color: #009be1;
+  background-color: #36a9e5;
 }
 #page-index .techs img.tech-icons {
   padding-bottom: 70px;
