--- a/tuistudio/static/css/layout.css
+++ b/tuistudio/static/css/layout.css
@@ -120,10 +120,14 @@ a:hover {
 .navbar .navbar-collapse .navbar-nav.navbar-right:last-child {
   margin-right: 20px;
 }
+.footer-header {
+  height: 77px;
+  background: url('/static/image/footer-bg-header.png') no-repeat top right;
+}
 .footer {
   background: url('/static/image/footer-bg.png') no-repeat;
   background-size: 100% 100%;
-  padding: 125px 0 45px 0;
+  padding: 45px 0 45px 0;
   line-height: 1;
   margin-top: 0px;
   color: white;
