--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -341,7 +341,7 @@
     font-size: 30px;
     font-weight: lighter;
     color: white;
-    background-color: rgb(0, 155, 225);
+    background-color: @main-color;
   }
 
   .techs {
