--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -77,6 +77,9 @@
    {% block page_content %}{% endblock %}
 </div>
 
+
+<div class="footer-header"></div>
+
 <div class="footer">
    <div class="container">
       <div class="footer-left pull-left">
