update footer font weight

--- a/tuistudio/static/css/layout.css
+++ b/tuistudio/static/css/layout.css
@@ -171,6 +171,7 @@ a:hover {
 }
 .footer .footer-right .logo {
   font-size: 22px;
+  font-weight: lighter;
   margin-bottom: 15px;
 }
 .footer .footer-right .slogan {
