--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -125,7 +125,7 @@
    <div class="slogan">
       Let our workforce finish the last mile
       <br>
-      so can you connect with your clients for the long haul.
+      so you can connect with your clients for the long haul.
    </div>
 
    <div class="work">
