--- a/tuistudio/templates/site/business.html
+++ b/tuistudio/templates/site/business.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block page_id %}page-business{% endblock %}
-{% block page_title %}Start Your Business{% endblock %}
+{% block page_title %}Start Your Business | TUI Studio{% endblock %}
 {% block page_css %}
    {{ link('css/share/fancySelect.css') }}
    {{ link('css/site/business.css') }}
