--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -53,8 +53,8 @@
             <li data-scroll-target="techs">
                <a href="{{ url_for('site.index') }}#techs">TECHS</a>
             </li>
-            <li data-scroll-target="process">
-               <a href="{{ url_for('site.index') }}#process">STEPS</a>
+            <li data-scroll-target="steps">
+               <a href="{{ url_for('site.index') }}#steps">STEPS</a>
             </li>
             {#            <li data-scroll-target="contact">#}
             {#               <a href="{{ url_for('site.index') }}#contact">CONTACT</a>#}
