--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -264,16 +264,12 @@
     padding: 25px 0px;
   }
 }
-#page-index .process {
+#page-index .steps {
   padding-bottom: 80px;
   background-color: #eeeeee;
 }
-#page-index .process p {
-  font-size: 18px;
-  margin-bottom: 25px;
-}
-#page-index .process img {
-  max-width: 200px;
+#page-index .steps .step {
+  background: white;
   border-radius: 5px;
   cursor: pointer;
   transition: all 150ms ease-out;
@@ -281,9 +277,14 @@
   -moz-transition: all 150ms ease-out;
   -ms-transition: all 150ms ease-out;
   -o-transition: all 150ms ease-out;
+  width: 200px;
+  display: inline-block;
 }
-#page-index .process img:hover {
+#page-index .steps .step:hover {
   margin-top: -8px;
+}
+#page-index .steps .step img {
+  width: 200px;
 }
 #page-index .contact {
   padding-top: 80px;
