--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -151,25 +151,33 @@
       </div>
    </div>
 
-   <div class="process">
+   <div class="steps">
       <div class="container">
          <h1 class="title">STEPS</h1>
 
          <div class="row">
             <div class="col-sm-3 text-center">
-               <img src="{{ static('image/process/PROCESS1.png') }}" class="process-img" alt=""/>
+               <div class="step">
+                  <img src="{{ static('image/steps/1.png') }}" class="process-img" alt=""/>
+               </div>
             </div>
 
             <div class="col-sm-3 text-center">
-               <img src="{{ static('image/process/PROCESS2.png') }}" class="process-img" alt=""/>
+               <div class="step">
+                  <img src="{{ static('image/steps/2.png') }}" class="process-img" alt=""/>
+               </div>
             </div>
 
             <div class="col-sm-3 text-center">
-               <img src="{{ static('image/process/PROCESS3.png') }}" class="process-img" alt=""/>
+               <div class="step">
+                  <img src="{{ static('image/steps/3.png') }}" class="process-img" alt=""/>
+               </div>
             </div>
 
             <div class="col-sm-3 text-center">
-               <img src="{{ static('image/process/PROCESS4.png') }}" class="process-img" alt=""/>
+               <div class="step">
+                  <img src="{{ static('image/steps/4.png') }}" class="process-img" alt=""/>
+               </div>
             </div>
          </div>
       </div>
