--- a/tuistudio/static/css/utils.less
+++ b/tuistudio/static/css/utils.less
@@ -20,6 +20,21 @@
   src: url(/static/fonts/lato-bold-webfont.woff) format('woff');
 }
 
+// nexa
+@font-face {
+  font-family: 'nexa';
+  font-style: normal;
+  font-weight: lighter;
+  src: url(/static/fonts/nexa-light-webfont.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'nexa';
+  font-style: normal;
+  font-weight: normal;
+  src: url(/static/fonts/nexa-bold-webfont.woff) format('woff');
+}
+
 // iconfont
 @font-face {
   font-family: 'iconfont';
