--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -118,18 +118,18 @@
    {#      </div>#}
    {#   </div>#}
 
+   {#   <div class="work works">#}
+   {#      <img src="{{ static('image/works/STARTUP1.png') }}" alt=""/>#}
+   {#   </div>#}
+
    <div class="work works">
-      <img src="{{ static('image/works/STARTUP1.png') }}" alt=""/>
+      <img src="{{ static('image/works/STARTUP2.jpg') }}" alt=""/>
    </div>
 
    <div class="slogan">
       Let our workforce finish the last mile
       <br>
       so you can connect with your clients for the long haul.
-   </div>
-
-   <div class="work">
-      <img src="{{ static('image/works/STARTUP2.jpg') }}" alt=""/>
    </div>
 
    <div class="work">
