--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -117,9 +117,11 @@ a {
   }
 }
 
-.footer-header{
-  height: 77px;
-  background: url('/static/image/footer-bg-header.png') no-repeat top right;
+.footer-header {
+  .container {
+    height: 77px;
+    background: url('/static/image/footer-bg-header.png') no-repeat top right;
+  }
 }
 
 .footer {
