--- a/tuistudio/static/css/utils.less
+++ b/tuistudio/static/css/utils.less
@@ -14,7 +14,7 @@
 }
 
 @font-face {
-  font-family: 'latobold';
+  font-family: 'lato';
   font-style: normal;
   font-weight: bold;
   src: url(/static/fonts/lato-bold-webfont.woff) format('woff');
