--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -78,7 +78,9 @@
 </div>
 
 
-<div class="footer-header"></div>
+<div class="footer-header">
+   <div class="container"></div>
+</div>
 
 <div class="footer">
    <div class="container">
