--- a/tuistudio/static/css/bootstrap.theme.css
+++ b/tuistudio/static/css/bootstrap.theme.css
@@ -11,7 +11,7 @@
   src: url(/static/fonts/lato-regular-webfont.woff) format('woff');
 }
 @font-face {
-  font-family: 'latobold';
+  font-family: 'lato';
   font-style: normal;
   font-weight: bold;
   src: url(/static/fonts/lato-bold-webfont.woff) format('woff');
@@ -45,7 +45,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 body {
-  font-family: 'nexa', sans-serif;
+  font-family: 'lato', sans-serif;
 }
 .btn {
   border-radius: 2px;
