--- a/tuistudio/static/css/component.css
+++ b/tuistudio/static/css/component.css
@@ -11,7 +11,7 @@
   src: url(/static/fonts/lato-regular-webfont.woff) format('woff');
 }
 @font-face {
-  font-family: 'latobold';
+  font-family: 'lato';
   font-style: normal;
   font-weight: bold;
   src: url(/static/fonts/lato-bold-webfont.woff) format('woff');
