--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -140,10 +140,12 @@ a {
         padding-right: 15px;
 
         a {
+          cursor: pointer;
           color: white;
 
           &:hover {
-            color: @main-color;
+            text-decoration: underline;
+            //            color: @main-color;
           }
         }
       }
@@ -171,7 +173,6 @@ a {
           color: white;
 
           &:hover {
-            color: @main-color;
           }
         }
       }
