--- a/tuistudio/templates/layout.html
+++ b/tuistudio/templates/layout.html
@@ -7,17 +7,26 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
    {% block meta %}{% endblock %}
    <link rel="Shortcut Icon" href="{{ static('image/favicon.png') }}">
-   {{ link('bower_components/bootstrap/dist/css/bootstrap.min.css') }}
-   {{ link('bower_components/font-awesome/css/font-awesome.min.css') }}
-   {{ link('css/bootstrap.theme.css') }}
-   {{ link('css/common.css') }}
-   {{ link('css/component.css') }}
-   {{ link('css/layout.css') }}
+
+   {% assets filters="cssmin", output="gen/public.css",
+      'bower_components/bootstrap/dist/css/bootstrap.min.css',
+      'bower_components/font-awesome/css/font-awesome.min.css',
+      'css/bootstrap.theme.css',
+      'css/common.css',
+      'css/component.css',
+      'css/layout.css' %}
+      <link rel="stylesheet" href="{{ ASSET_URL }}">
+   {% endassets %}
    {% block page_css %}{% endblock %}
-   {{ script('bower_components/respond/dest/respond.min.js') }}
-   {{ script('bower_components/jquery/dist/jquery.min.js') }}
-   {{ script('bower_components/bootstrap/dist/js/bootstrap.min.js') }}
-   {{ script('bower_components/jquery.scrollTo/jquery.scrollTo.min.js') }}
+
+   {% assets filters="jsmin", output="gen/public.js",
+      'bower_components/respond/dest/respond.min.js',
+      'bower_components/jquery/dist/jquery.min.js',
+      'bower_components/bootstrap/dist/js/bootstrap.min.js',
+      'bower_components/jquery.scrollTo/jquery.scrollTo.min.js',
+      'bower_components/fancyselect/fancySelect.js' %}
+      <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+   {% endassets %}
    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 </head>
 
