--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -4,10 +4,16 @@
 {% block page_title %}TUI Studio | An Innovative Workforce Marketplace|Intelligence as a Service for
    Web Solutions{% endblock %}
 {% block page_css %}
-   {{ link('css/site/index.css') }}
+   {% assets filters="cssmin", output="gen/site.css",
+      'css/site/index.css' %}
+      <link rel="stylesheet" href="{{ ASSET_URL }}">
+   {% endassets %}
 {% endblock %}
 {% block page_js %}
-   {{ script('js/site/index.js') }}
+   {% assets filters="jsmin", output="gen/index.js",
+      'js/site/index.js' %}
+      <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+   {% endassets %}
 {% endblock %}
 
 {% block page_content %}
