--- a/tuistudio/static/css/site/index.less
+++ b/tuistudio/static/css/site/index.less
@@ -221,7 +221,7 @@
     line-height: 1.8;
     font-size: 30px;
     color: white;
-//    font-weight: lighter;
+    font-weight: lighter;
     background-color: @main-color;
   }
 
