--- a/tuistudio/static/css/bootstrap.theme.css
+++ b/tuistudio/static/css/bootstrap.theme.css
@@ -45,7 +45,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 body {
-  font-family: 'lato', sans-serif;
+  font-family: 'nexa', sans-serif;
 }
 .btn {
   border-radius: 2px;
