--- a/tuistudio/static/css/site/index.css
+++ b/tuistudio/static/css/site/index.css
@@ -208,6 +208,7 @@
 }
 #page-index .services .service {
   text-align: center;
+  font-size: 16px;
 }
 #page-index .services .service .fa,
 #page-index .services .service .iconfont {
