--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -58,9 +58,7 @@
 
                <div class="gap"></div>
 
-               <p>From a salesman to a sales force.</p>
-
-               <p class="desc">We design, build and market Web and mobile apps for a better
+               <p class="desc">From a salesman to a sales force. We design, build and market Web and mobile apps for a better
                   outreach, under your own brand.</p>
             </div>
 
@@ -71,9 +69,7 @@
 
                <div class="gap"></div>
 
-               <p>From a spread sheet to a data service.</p>
-
-               <p class="desc">We publish location information powered by open source and
+               <p class="desc">From a spread sheet to a data service. We publish location information powered by open source and
                   proprietary software, on your own map.</p>
             </div>
 
@@ -84,9 +80,7 @@
 
                <div class="gap"></div>
 
-               <p>From a work machine to a work place.</p>
-
-               <p class="desc">We deploy private cloud computing, storage & hosting and support
+               <p class="desc">From a work machine to a work place. We deploy private cloud computing, storage & hosting and support
                   complex sysOps and devOps, in your own office.</p>
             </div>
          </div>
