update index page

--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -73,8 +73,8 @@
 
                <p>From a spread sheet to a data service.</p>
 
-               <p class="desc">We publish location information powered by open source and
-                  proprietary software, on your own map.</p>
+               <p class="desc">We publish location information powered by open source, proprietary
+                  and cloud-based mapping engines from your own database.</p>
             </div>
 
             <div class="col-sm-4 service">
