--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -74,7 +74,7 @@
                <p>From a spread sheet to a data service.</p>
 
                <p class="desc">We publish location information powered by open source, proprietary
-                  and cloud-based mapping engines from your own database.</p>
+                  and cloud-based mapping engines, from your own database.</p>
             </div>
 
             <div class="col-sm-4 service">
