--- a/tuistudio/static/css/layout.less
+++ b/tuistudio/static/css/layout.less
@@ -1,10 +1,13 @@
 @import "utils";
 
 html {
+  position: relative;
+  min-height: 100%;
 }
 
 body {
   margin-top: 81px;
+  margin-bottom: 249px;
 
   //  .main-wap {
   //    @media (min-width: 1200px) {
@@ -117,79 +120,85 @@ a {
   }
 }
 
-.footer-header {
-  .container {
-    height: 77px;
-    background: url('/static/image/footer-bg-header.png') no-repeat top right;
-  }
-}
-
 .footer {
-  background: url('/static/image/footer-bg.png') no-repeat;
-  background-size: 100% 100%;
-  padding: 45px 0 45px 0;
-  line-height: 1;
-  margin-top: 0px;
-  color: white;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 249px;
 
-  .footer-left {
-    .links {
-      margin-bottom: 18px;
-
-      li {
-        padding-right: 15px;
-
-        a {
-          cursor: pointer;
-          color: white;
-
-          &:hover {
-            text-decoration: underline;
-            //            color: @main-color;
-          }
-        }
-      }
-    }
-
-    .usa {
-      display: block;
-      margin-left: 12px;
-      height: 16px;
-      margin-top: 0px;
-    }
-
-    .cp {
-      margin-bottom: 18px;
-    }
-
-    .icons {
-      font-size: 18px;
-      margin-bottom: 0;
-
-      li {
-        padding-right: 8px;
-
-        a {
-          color: white;
-
-          &:hover {
-          }
-        }
-      }
+  .footer-header {
+    .container {
+      height: 77px;
+      background: url('/static/image/footer-bg-header.png') no-repeat top right;
     }
   }
 
-  .footer-right {
-    text-align: right;
+  .footer-content {
+    background: url('/static/image/footer-bg.png') no-repeat;
+    background-size: 100% 100%;
+    padding: 45px 0 45px 0;
+    line-height: 1;
+    margin-top: 0px;
+    color: white;
 
-    .logo {
-      font-size: 22px;
-      font-weight: lighter;
-      margin-bottom: 15px;
+    .footer-left {
+      .links {
+        margin-bottom: 18px;
+
+        li {
+          padding-right: 15px;
+
+          a {
+            cursor: pointer;
+            color: white;
+
+            &:hover {
+              text-decoration: underline;
+            }
+          }
+        }
+      }
+
+      .usa {
+        display: block;
+        margin-left: 12px;
+        height: 16px;
+        margin-top: 0px;
+      }
+
+      .cp {
+        margin-bottom: 18px;
+      }
+
+      .icons {
+        font-size: 18px;
+        margin-bottom: 0;
+
+        li {
+          padding-right: 8px;
+
+          a {
+            color: white;
+
+            &:hover {
+            }
+          }
+        }
+      }
     }
 
-    .slogan {
-      line-height: 20px;
+    .footer-right {
+      text-align: right;
+
+      .logo {
+        font-size: 22px;
+        font-weight: lighter;
+        margin-bottom: 15px;
+      }
+
+      .slogan {
+        line-height: 20px;
+      }
     }
   }
 }
