Update error pages.

--- a/tuistudio/templates/site/404.html
+++ b/tuistudio/templates/site/404.html
@@ -3,10 +3,10 @@
 {% block page_title %}404{% endblock %}
 {% block page_id %}page-404-error{% endblock %}
 
-{% block body %}
+{% block page_content %}
 
-   <h2>404错误</h2>
+   <h2>404 ERROR</h2>
 
-   <p>抱歉，找不到你要的页面呀！</p>
+   <p>Sorry, cannot find this page.</p>
 
 {% endblock %}
