--- a/tuistudio/templates/site/403.html
+++ b/tuistudio/templates/site/403.html
@@ -3,10 +3,10 @@
 {% block page_title %}403{% endblock %}
 {% block page_id %}page-403-error{% endblock %}
 
-{% block body %}
+{% block page_content %}
 
-   <h2>403错误</h2>
+   <h2>403 ERROR</h2>
 
-   <p>抱歉，你的权限不够哦！</p>
+   <p>Sorry, you have no permission to access this page.</p>
 
 {% endblock %}
