--- a/tuistudio/templates/site/500.html
+++ b/tuistudio/templates/site/500.html
@@ -3,10 +3,10 @@
 {% block page_title %}500{% endblock %}
 {% block page_id %}page-500-error{% endblock %}
 
-{% block body %}
+{% block page_content %}
 
-   <h2>500错误</h2>
+   <h2>500 ERROR</h2>
 
-   <p>抱歉，服务器开小差啦！管理员正在加紧恢复中！</p>
+   <p>Sorry, something went wrong with the server.</p>
 
 {% endblock %}
