Update error pages.

--- a/tuistudio/templates/site/403.html
+++ b/tuistudio/templates/site/403.html
@@ -4,9 +4,9 @@
 {% block page_id %}page-403-error{% endblock %}
 
 {% block page_content %}
+   <div class="container">
+      <h2>403 ERROR</h2>
 
-   <h2>403 ERROR</h2>
-
-   <p>Sorry, you have no permission to access this page.</p>
-
+      <p>Sorry, you have no permission to access this page.</p>
+   </div>
 {% endblock %}
