--- a/tuistudio/templates/site/404.html
+++ b/tuistudio/templates/site/404.html
@@ -4,9 +4,9 @@
 {% block page_id %}page-404-error{% endblock %}
 
 {% block page_content %}
+   <div class="container">
+      <h2>404 ERROR</h2>
 
-   <h2>404 ERROR</h2>
-
-   <p>Sorry, cannot find this page.</p>
-
+      <p>Sorry, cannot find this page.</p>
+   </div>
 {% endblock %}
