--- a/tuistudio/templates/site/500.html
+++ b/tuistudio/templates/site/500.html
@@ -4,9 +4,9 @@
 {% block page_id %}page-500-error{% endblock %}
 
 {% block page_content %}
+   <div class="container">
+      <h2>500 ERROR</h2>
 
-   <h2>500 ERROR</h2>
-
-   <p>Sorry, something went wrong with the server.</p>
-
+      <p>Sorry, something went wrong with the server.</p>
+   </div>
 {% endblock %}
