--- a/tuistudio/templates/site/index.html
+++ b/tuistudio/templates/site/index.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
 {% block page_id %}page-index{% endblock %}
-{% block page_title %}TUI Studio | An Innovative Workforce Marketplace|Intelligence as a Service for
-   Web Solutions{% endblock %}
+{% block page_title %}TUI Studio | An Innovative Workforce Marketplace | Intelligence as a Service
+   for Web Solutions{% endblock %}
 {% block page_css %}
    {% assets filters="cssmin", output="gen/site.css",
       'css/site/index.css' %}
